[fix] adjust mobile long word overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,7 @@
   .article-body {
     @apply prose prose-lg prose-slate prose-invert prose-purple;
 
-    @apply prose-p:font-medium prose-h2:text-attention prose-a:text-attention prose-quoteless;
+    @apply prose-p:font-medium prose-p:break-words  prose-h2:text-attention prose-a:text-attention prose-quoteless;
 
     @apply prose-pre:mt-0 prose-pre:p-0.5 prose-pre:border prose-pre:border-slate-500 prose-pre:rounded-lg prose-strong;
 
